upgraded version of packages

--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -3,7 +3,7 @@
     "promptValues": {
       "authorName": "Nicolas Balduzzi",
       "authorEmail": "nico.balduzzi@gmail.com",
-      "authorUrl": "https://github.com/chapuletta"
+      "authorUrl": "https://github.com/nbalduzzi"
     }
   }
 }
