--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
   "main": "generators/index.js",
   "keywords": ["yeoman-generator", "fastify", "archetype"],
   "devDependencies": {
-    "yeoman-test": "^1.7.2",
-    "yeoman-assert": "^3.1.1",
-    "nsp": "^3.2.1",
     "eslint": "^4.19.1",
-    "prettier": "^1.12.1",
-    "husky": "^0.14.3",
-    "lint-staged": "^7.1.0",
     "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-prettier": "^2.6.0",
     "eslint-config-xo": "^0.22.2",
-    "jest": "^22.4.3"
+    "eslint-plugin-prettier": "^2.6.0",
+    "husky": "^0.14.3",
+    "jest": "^24.7.1",
+    "lint-staged": "^8.1.5",
+    "nsp": "^3.2.1",
+    "prettier": "^1.12.1",
+    "yeoman-assert": "^3.1.1",
+    "yeoman-test": "^1.7.2"
   },
   "engines": {
     "npm": ">= 4.0.0"
