--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-fastify",
-  "version": "1.0.7",
+  "version": "1.1.0",
   "description": "Fastify Generator for APIs",
   "homepage": "https://github.com/nbalduzzi",
   "author": {
@@ -18,23 +18,25 @@
     "archetype"
   ],
   "devDependencies": {
-    "eslint": "^6.5.1",
-    "eslint-config-prettier": "^6.4.0",
-    "eslint-config-xo": "^0.27.1",
-    "eslint-plugin-prettier": "^3.1.1",
-    "husky": "^3.0.9",
-    "jest": "^24.9.0",
-    "lint-staged": "^9.4.2",
-    "prettier": "^1.18.2",
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
+    "eslint": "^7.19.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-config-xo": "^0.34.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "husky": "^5.0.9",
+    "jest": "^26.6.3",
+    "lint-staged": "^10.5.4",
+    "prettier": "^2.2.1",
     "yeoman-assert": "^3.1.1",
-    "yeoman-test": "^2.0.0"
+    "yeoman-test": "^4.0.0"
   },
   "engines": {
     "npm": ">= 4.0.0"
   },
   "dependencies": {
-    "yeoman-generator": "^4.1.0",
-    "chalk": "^2.4.2",
+    "yeoman-generator": "^4.13.0",
+    "chalk": "^4.1.0",
     "yosay": "^2.0.2"
   },
   "jest": {
@@ -77,8 +79,18 @@
       "prettier"
     ]
   },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/nbalduzzi/generator-fastify.git"
+  },
+  "release": {
+    "branches": [
+      "master"
+    ]
   }
 }
